tests/inputs/invalid/syntax/f.crbc
type int is integer;
routine fibonacci (x : int) : int is 
    if ( x = 0) then
        return 0;
    end
    if (x = 1) then
        return 1;
    end
    return fibonacci(x - 1) + fibonacci(x - 2);
end

routine main () : int is
   var a : array [6] int is [1, 2, 3, 4, 5, 6];
   for var i : int in 1 .. 6
   loop
       print(fibonacci(i));
       print('\n');
    end
   return 0;
end